--- a/gamepage/stages/3/style.css
+++ b/gamepage/stages/3/style.css
@@ -61,9 +61,7 @@ main {
             box-shadow:  11px 11px 22px #928c7a,
                         -11px -11px 22px #e4dcbe;
         }
-        #hole {
-            width: 83%;
-            top: 8.5%;
+        .hole {
             border: solid 3px transparent;
             background: linear-gradient(
                             var(--defaultColor-Dark),
@@ -79,11 +77,25 @@ main {
                             rgb(58, 55, 45),
                             rgb(122, 116, 92)
                         ) border-box;
+            &#secondHole {
+                width: 83%;
+                top: 8.5%;
+            }
+            &#minuteHole {
+                width: 73%;
+                top: 13.5%;
+            }
+            &#hourHole {
+                width: 53%;
+                top: 23.5%;
+            }
+            &#tempHole {
+                width: 23%;
+                top: 38.5%;
+            }
         }
-        #hour {
+        .dial {
             --fill-color: var(--defaultColor);
-            width: 80%;
-            top: 10%;
             border: solid 3px transparent;
             background: linear-gradient(
                             var(--fill-color),
@@ -99,16 +111,47 @@ main {
                             var(--defaultColor-Light),
                             rgb(221, 213, 190)
                         ) border-box;
-            box-shadow: 50px 20px 20px rgb(10, 10, 10, .2),
+            /* box-shadow: 50px 20px 20px rgb(10, 10, 10, .2),
                         20px 20px 10px rgb(10, 10, 10, .1),
-                        20px 40px 20px rgb(10, 10, 10, .3);
-                        transition: .2s ease;
-            &:hover {
+                        20px 40px 20px rgb(10, 10, 10, .3); */
+            transition: .2s ease;
+            rotate: 90deg;
+            /* &:hover {
                 --fill-color: rgb(182, 175, 152);
                 box-shadow: none;
-                /* box-shadow: 5px 2px 20px rgb(10, 10, 10, .0),
+                box-shadow: 5px 2px 20px rgb(10, 10, 10, .0),
                             2px 2px 10px rgb(10, 10, 10, .0),
-                            2px 4px 20px rgb(10, 10, 10, .0); */
+                            2px 4px 20px rgb(10, 10, 10, .0);
+                            } */
+            &::after {
+                content: "";
+                display: block;
+                width: 50%;
+                height: 2px;
+                position: relative;
+                top: 50%;
+                left: 0;
+                background: var(--defaultColor-Dark);
+            }
+            &#second {
+                width: 80%;
+                top: 10%;
+                transition: transform 1s linear;
+            }
+            &#minute {
+                width: 70%;
+                top: 15%;
+                transition: transform 1s linear;
+            }
+            &#hour {
+                width: 50%;
+                top: 25%;
+                transition: transform 1s linear;
+            }
+            &#temp {
+                width: 20%;
+                top: 40%;
+                animation: planet-rotation 3s linear infinite;
             }
         }
     }
