--- a/gamepage/stages/4/style.css
+++ b/gamepage/stages/4/style.css
@@ -1,7 +1,8 @@
 /*基本設定*/
 @import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap');
-@import url('../../../style_hamburger.css');
+@import url('../../../root/style_pageback.css');
+@import url('../../../root/style_clear_icon.css');
 .font-bad {
     font-family: "Bad Script", cursive;
 }
@@ -18,10 +19,30 @@ body, html {
     background: rgb(168, 161, 137);
     touch-action: manipulation;
     scrollbar-width: none;
-    width: 100%;
+    --htmlWidth: 100%;
+    --htmlHeight: 100%;
+    width: var(--htmlWidth);
+    height: var(--htmlHeight);
+    overflow: hidden;
+    transition: 1s var(--transition-move);
 }
 
 
 /*--------------------------------------------------*/
 
+main {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    #clearIcon {
+        top: calc(50vh - 40px);
+        left: calc(50vw - 40px);
+    }
+}
 
+@media (max-width: 999px) { /*スマホモード*/
+    @media (orientation: portrait) {    /*縦向き用（portrait: 肖像画）*/
+    }
+}
