--- a/gamepage/stages/6/style.css
+++ b/gamepage/stages/6/style.css
@@ -27,6 +27,7 @@ body, html {
     transition: 1s var(--transition-move);
 }
 :root {
+    --portrait: 0;
 }
 
 
@@ -42,7 +43,11 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    #permission {
+        display: none;
+    }
     .frame {
+        display: block;
         position: absolute;
         border: solid;
         &#frame_0 {
@@ -80,31 +85,8 @@ main {
 
 @media (max-width: 999px) { /*スマホモード*/
     @media (orientation: portrait) {    /*縦向き用（portrait: 肖像画）*/
+        :root { --portrait: 1; }
         main {
-            /* #clearIcon_0 {
-                width: 90px;
-                top: calc(80vh - 45px);
-                left: calc(10vw - 45px);
-            }
-            #clearIcon_1 {
-                width: 140px;
-                top: calc(25vh - 70px);
-                left: calc(30vw - 70px);
-            }
-            #clearIcon_2 {
-                width: 60px;
-                top: calc(50vh - 30px);
-                left: calc(50vw - 30px);
-            }
-            #clearIcon_3 {
-                top: calc(86vh - 40px);
-                right: calc(30vw - 40px);
-            }
-            #clearIcon_4 {
-                width: 260px;
-                top: calc(1vh - 130px);
-                right: calc(10vw - 130px);
-            } */
         }
     }
 }
