--- a/gamepage/stages/6/style.css
+++ b/gamepage/stages/6/style.css
@@ -43,8 +43,43 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    #permission {
-        display: none;
+    #caution {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: rgb(20, 20, 20, .5);
+        opacity: 0;
+        z-index: 9999;
+        p {
+            color: var(--defaultColor-Light);
+            font-family: var(--defaultFont-バッド);
+            font-size: 25px;
+            margin-bottom: .5em;
+        }
+        #permission {
+            height: 3em;
+            width: 18em;
+            margin-top: 2vh;
+            background: rgb(187, 180, 156, .5);
+            filter: drop-shadow(8px 8px 3px rgb(0, 0, 0, .42));
+            border-right: solid 1px rgb(250, 250, 250, .5);
+            border-bottom: solid 1px rgb(250, 250, 250, .6);
+            border-top: solid 1px rgb(250, 250, 250, .3);
+            border-left: solid 1px rgb(250, 250, 250, .3);
+            border-radius: 6px;
+            font-family: var(--defaultFont-バッド);
+            font-size: 18px;
+            text-shadow: 0 0 2px rgb(255, 255, 255, .2),
+                        0 0 5px rgb(175, 167, 144, .5);
+            transition: .3s ease-out;
+            &:hover {
+                filter: drop-shadow(5px 5px 1px rgb(0, 0, 0, .52));
+            }
+        }
     }
     .frame {
         display: block;
