--- a/gamepage/style.css
+++ b/gamepage/style.css
@@ -36,7 +36,7 @@ header {
     } */
     #leftContainer {
         width: 70vw;
-        justify-content: space-between;
+        justify-content: center;
     }
     #rightContainer {
         width: 30vw;
@@ -46,7 +46,7 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: calc(100% / 3);
+        width: 50%;
         height: 100vh;
         &#lev2 {
             background: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.08)15%, rgb(0, 0, 0, .2)50%);
@@ -80,7 +80,7 @@ header {
     .stNumber {
         width: max-content;
         padding: 3% 10%;
-        font-size: 2.7vh;
+        font-size: 30px;
         mix-blend-mode: normal;
         color: rgb(30, 28, 21);
         &::after {
@@ -220,7 +220,7 @@ header {
                 }
             }
             .stage h1, .stNumber {
-                font-size: 1.5em;
+                font-size: 20px;
             }
             .thumbnail {
                 height: 4vh;
