--- a/gamepage/stages/2/style.css
+++ b/gamepage/stages/2/style.css
@@ -36,65 +36,77 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    #symbol {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    #tabBar {
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        .symbolItem {
-            aspect-ratio: 1 / 1;
-            width: 300px;
-            position: absolute;
-            top: 25%;
-            mix-blend-mode: difference;
-            background: rgb(157, 152, 135);
-            transform-origin: 50% 50%;
-            border-radius: 50%;
-            transition: 1s var(--transition-move);
-            &#shader {
-                width: 300px;
-                mix-blend-mode: normal;
-                background: rgb(0, 0, 0, 0);
-                box-shadow: 0 0 15px rgb(40, 40, 40),
-                            0 0 30px rgb(110, 106, 91);
+        width: 100%;
+        height: max-content;
+        background: rgb(30, 28, 21, .8);
+        #leftContent {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-left: 20px;
+            #symbol {
+                aspect-ratio: 1 / 1;
+                width: 120px;
+                height: 120px;
+                margin: 15px 20px;
+                background: linear-gradient(to top left, rgb(10, 130, 211), rgb(98, 198, 209));
+                &::before {
+                    content: "";
+                    width: 100%;
+                    height: 10px;
+                    display: block;
+                    position: relative;
+                    top: calc(50% - 5px);
+                    background: rgb(30, 28, 21, .8);
+                }
+                &::after {
+                    content: "";
+                    width: 10px;
+                    height: 100%;
+                    display: block;
+                    position: relative;
+                    top: -8%;
+                    left: calc(50% - 5px);
+                    background: rgb(30, 28, 21, .8);
+                }
             }
-            &#semicircle-left {
-                background: linear-gradient(to right, rgb(157, 152, 135)0%, rgb(157, 152, 135)50%, rgb(0, 0, 0, 0)50%, rgb(0, 0, 0, 0)100%);
-                border: solid 10px rgb(0, 0, 0);
+            #particleCanvas {
+                position: absolute;
             }
-            &#circle {
-                transition: 1s var(--transition-move);
-                border: solid rgb(0, 0, 0);
-                border-width: 75px;
+            #clearIcon {
+                position: relative;
+                width: 110px;
+                margin: 0 20px;
+            }
+            #Edge {
+                background: url('../../../images/stagesImg/2/Edge_Icon.png') no-repeat;
+            }
+            #Chrome {
+                background: url('../../../images/stagesImg/2/chrome.png');
+            }
+            #VSCode {
+                background: url('../../../images/stagesImg/2/VisualStudioCode_icon.png');
+            }
+            #Edge, #Chrome, #VSCode {
+                aspect-ratio: 1 / 1;
+                width: 110px;
+                margin: 0 20px;
+                background-size: cover;
             }
         }
-
-        &.active {
-            #shader {
-                background: rgb(157, 152, 135);
-                box-shadow: 0 0 15px rgb(255, 255, 255),
-                            0 0 60px rgb(157, 152, 135);
-            }
-            #object {
-                transform: scale(.5);
-            }
-            #semicircle-left {
-                transform: rotate(180deg);
-            }
-            #circle {
-                transform: scale(2);
-            }
+        #rightContent {
+            margin-right: 20px;
         }
-    }
-    #clearIcon {
-        top: 75vh;
-        left: calc(50vw - 40px);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    body, html{
-        background: rgb(24, 23, 17);
     }
 }
 
