--- a/gamepage/stages/2/style.css
+++ b/gamepage/stages/2/style.css
@@ -82,6 +82,8 @@ main {
             }
             #particleCanvas {
                 position: absolute;
+                top: 0;
+                left: 0;
             }
             #clearIcon {
                 position: relative;
@@ -105,7 +107,23 @@ main {
             }
         }
         #rightContent {
-            margin-right: 20px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            margin-right: 30px;
+            color: var(--defaultColor-Light);
+            #time p {
+                text-align: end;
+                font-size: 30px;
+            }
+            #bell {
+                aspect-ratio: 1 / 1;
+                width: 60px;
+                height: 60px;
+                margin-left: 10px;
+                background: url(../../../images/stagesImg/2/bell.png) no-repeat;
+                background-size: cover;
+            }
         }
     }
 }
