--- a/gamepage/stages/2/style.css
+++ b/gamepage/stages/2/style.css
@@ -38,26 +38,29 @@ main {
     left: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     align-content: center;
+    overflow: hidden;
     #tabBar {
+        width: 100%;
+        height: max-content;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        width: 100%;
-        height: max-content;
+        /* margin-bottom: 10px; */
         background: rgb(30, 28, 21, .8);
         #leftContent {
+            height: 100%;
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
             margin-left: 20px;
+            padding: 10px 0;
             #symbol {
                 aspect-ratio: 1 / 1;
-                width: 120px;
-                height: 120px;
+                height: 100%;
                 margin: 15px 20px;
                 background: linear-gradient(to top left, rgb(10, 130, 211), rgb(98, 198, 209));
                 &::before {
@@ -75,7 +78,7 @@ main {
                     height: 100%;
                     display: block;
                     position: relative;
-                    top: -8%;
+                    top: -9%;
                     left: calc(50% - 5px);
                     background: rgb(30, 28, 21, .8);
                 }
@@ -107,6 +110,7 @@ main {
             }
         }
         #rightContent {
+            height: 100%;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -130,5 +134,47 @@ main {
 
 @media (max-width: 999px) { /*スマホモード*/
     @media (orientation: portrait) {    /*縦向き用（portrait: 肖像画）*/
+        main {
+            padding: 10px;
+            #tabBar {
+                justify-content: center;
+                border-radius: 30px;
+                #leftContent {
+                    margin-left: 0;
+                    #symbol {
+                        width: 90px;
+                        height: 90px;
+                        background: url(../../../images/stagesImg/2/setting.png) no-repeat;
+                        background-size: cover;
+                        margin: 0;
+                        &::before, &::after {
+                            background: none;
+                        }
+                    }
+                    #clearIcon {
+                        width: 80px;
+                        margin: 10px;
+                    }
+                    #Chrome {
+                        margin: 0;
+                        width: 80px;
+                        height: 80px;
+                    }
+                    #Edge {
+                        display: none;
+                    }
+                    #VSCode {
+                        width: 80px;
+                        height: 80px;
+                        margin: 0;
+                        background: url(../../../images/stagesImg/2/youtube.png) no-repeat;
+                        background-size: cover;
+                    }
+                }
+                #rightContent {
+                    display: none;
+                }
+            }
+        }
     }
 }
