--- a/gamepage/style.css
+++ b/gamepage/style.css
@@ -188,6 +188,44 @@ header {
                 -11px -11px 15px #dbd3b7;
 }
 
+#downloadModal {
+    display: none;
+    /* display: flex; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0, 0, 0, .2);
+    opacity: 0;
+    z-index: 9999;
+    &:hover {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    div {
+        width: 85vw;
+        /* background: url(5A5H3OTZwMu6RK31764988954_1764988975.png) no-repeat center rgb(255, 255, 255, .1);
+        background-size: cover; */
+        background: rgb(255, 255, 255, .2);
+        backdrop-filter: blur(3px);
+        box-shadow: 0px 15px 20px rgba(0, 0, 0, .2);
+        border-radius: 20px;
+        border: 1px solid rgb(250, 250, 250, .2);
+        padding: 20px;
+        text-align: center;
+        a, p {
+            font-family: var(--defaultFont-レシート);
+            font-size: 22px;
+            text-shadow: 0 0 5px rgb(255, 255, 255, 0.6);
+        }
+    }
+}
+
+
+
 @media (max-width: 999px) { /*スマホモード*/
     /* body, html {
         overflow: auto;
