--- a/root/style_hamburger.css
+++ b/root/style_hamburger.css
@@ -105,19 +105,18 @@
 .hamburger_items {
     width: 30%;
     height: 70%;
-    opacity: 0;
     position: absolute;
     top: 70px;
     left: 20px;
     margin: auto;
-    z-index: 1000;
-    transition: opacity 0.6s ease;
-    pointer-events: none;
-    background: rgba(207, 201, 182, 0.2);
-    /* filter: drop-shadow(20px 20px 2px rgb(0, 0, 0, .4)); */
+    background: rgb(207, 201, 182, 0.2);
     backdrop-filter: blur(5px);
     border-radius: 20px;
-    border: 1px solid rgba(250, 250, 250, .2);
+    border: 1px solid rgb(250, 250, 250, .2);
+    opacity: 0;
+    transition: opacity 0.6s ease;
+    pointer-events: none;
+    z-index: 1000;
     a {
         display: flex;
         align-items: flex-start;
@@ -163,19 +162,14 @@
             font-size: 1.5em;
             text-align: center;
         }
-        /* &.active {
-            display: none;
-        } */
     }
     #loginButton {
         top: calc(-1.5em + 5px);
         font-size: 2em;
         opacity: 1;
-        /* &.active {
-            display: none;
-            } */
-        }
-        .my-contact-btn {
+        pointer-events: none;
+    }
+    .my-contact-btn {
         width: 10em;
         position: relative;
         bottom: 0;
@@ -198,7 +192,7 @@
         z-index: 2;    /* ←ポイント */
         transition: .3s; /* ←ポイント */
     }
-    .my-contact-btn:hover .temp{
+    .my-contact-btn:hover .temp {
         color: gray;
     }
     /*ボタン上のアニメーションの設定*/
@@ -215,7 +209,7 @@
         transition: transform .3s ease;   /* ←ポイント */
         transform-origin: left;           /* ←ポイント */
     }
-    .my-btn-animation:hover:before{
+    .my-btn-animation:hover:before {
         transform: scale(1, 1);    /* ←ポイント */
         transform-origin: left;  /* ←ポイント */
     }
