--- a/root/style_hamburger.css
+++ b/root/style_hamburger.css
@@ -160,12 +160,14 @@
             right: 0;
             margin: 0 1em;
             font-size: 1.5em;
+            color: var(--defaultColor-Dark);
             text-align: center;
         }
     }
     #loginButton {
         top: calc(-1.5em + 5px);
         font-size: 2em;
+        color: var(--defaultColor-Dark);
         opacity: 1;
         pointer-events: none;
     }
